Added the rest of the files.
Replaced the original files uploaded with updated ones.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>About Us</title>
+    <link rel="stylesheet" href="style1.css">
+    <title>Fernando Cifuentes | Home</title>
     
 </head>
 <body>
+     <a href="index.html">Home</a>
+     <a href="portfolio.html">Portfolio</a>
+     <a href="qualifications.html">Qualifications</a>
+     <a href="service.html">Service</a>
+     <a href="genai.html">GenAI</a>
     <h1>Howdy!</h1>
+    <h2>My name is Fernando Cifuentes.</h2>
     <img src="me.jpg" width="500px">
-    <p>What is your favorite movie?</p>
-    <ul>
-        <li>Fernando - The Matrix</li>
-        <li>Will - Interstellar </li>
-        <li>Jacob - Spongebob Movie</li>
-        <li>Oliver - The Hunger Games</li>
-    </ul>
+    <h3>About me</h3>
+    <p>I am a junior at Texas A&M University, studying Computer Science. I am driven to apply my skills 
+        in software development to help solve real-world problems. I am a hardworking person, who is willing
+        to adapt to change. Have a look at my projects and qualifications to learn more about me!
+    </p>
+    <img src="TAMU.svg">
 </body>
 </html>
