Updated all pages to have proper navigation, created the first stylesheet, and added a working button to switch styles.

--- a/genai.html
+++ b/genai.html
@@ -7,11 +7,14 @@
     <title>GenAI | Fernando Cifuentes</title>
 </head>
 <body>
-    <!-- Navigation bar will go here -->
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="qualifications.html">Qualifications</a>
-    <a href="service.html">Service</a>
-    <a href="genai.html">GenAI</a>
+    <nav class="simple-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="qualifications.html">Qualifications</a></li>
+            <li><a href="service.html">Service</a></li>
+            <li class="active"><a href="genai.html">GenAI</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
