--- a/genai.html
+++ b/genai.html
@@ -3,18 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
-    <title>GenAI | Fernando Cifuentes</title>
+    <title>Generative AI Showcase</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+            color: #1f2937;
+        }
+    </style>
 </head>
-<body>
-    <nav class="simple-nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="qualifications.html">Qualifications</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li class="active"><a href="genai.html">GenAI</a></li>
-        </ul>
+<body class="min-h-screen flex flex-col">
+
+    <!-- Navigation Bar -->
+    <nav class="bg-white shadow-lg py-4 px-6 md:px-12 flex flex-col md:flex-row items-center justify-between sticky top-0 z-50">
+        <div class="flex items-center space-x-2">
+            <span class="text-2xl font-bold text-indigo-600">GenAI Demo</span>
+        </div>
+        <div class="mt-4 md:mt-0 flex flex-wrap items-center justify-center space-x-4">
+            <a href="index.html" class="text-gray-600 hover:text-indigo-600 transition-colors duration-200">Index</a>
+            <a href="portfolio.html" class="text-gray-600 hover:text-indigo-600 transition-colors duration-200">Portfolio</a>
+            <a href="qualifications.html" class="text-gray-600 hover:text-indigo-600 transition-colors duration-200">Qualifications</a>
+            <a href="service.html" class="text-gray-600 hover:text-indigo-600 transition-colors duration-200">Services</a>
+        </div>
     </nav>
+
+    <!-- Main Content -->
+    <main class="flex-grow container mx-auto p-4 md:p-8 flex items-center justify-center">
+        <div class="bg-white p-6 md:p-10 rounded-3xl shadow-2xl w-full max-w-4xl border border-gray-200 flex flex-col items-center">
+            <h1 class="text-3xl md:text-4xl font-extrabold text-center text-gray-900 mb-2">Generative AI Showcase</h1>
+            <p class="text-center text-gray-500 mb-8 max-w-prose">
+                This single web page demonstrates the capabilities of a large language model.
+                Enter a prompt below to see how AI can generate creative and informative text in real-time.
+            </p>
+
+            <!-- AI Interaction Area -->
+            <div class="w-full">
+                <div class="mb-6">
+                    <label for="prompt" class="block text-gray-700 font-semibold mb-2">Enter your prompt:</label>
+                    <textarea id="prompt" rows="4" class="w-full p-4 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-all duration-200 placeholder-gray-400" placeholder="e.g., Write a short, whimsical story about a squirrel who learns to fly."></textarea>
+                </div>
+
+                <div class="flex justify-center">
+                    <button id="generateBtn" class="bg-indigo-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-indigo-700 transform hover:scale-105 transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                        Generate Text
+                    </button>
+                </div>
+
+                <!-- Loading Spinner -->
+                <div id="loading" class="mt-8 hidden flex justify-center items-center">
+                    <div class="animate-spin rounded-full h-10 w-10 border-4 border-indigo-500 border-t-transparent"></div>
+                </div>
+
+                <!-- Output Area -->
+                <div id="output" class="mt-8 p-6 bg-gray-50 border border-gray-200 rounded-2xl shadow-inner min-h-[100px] whitespace-pre-wrap text-gray-800">
+                    <!-- Generated text will appear here -->
+                </div>
+
+                <!-- Prompt Display Area -->
+                <div class="mt-8 p-6 bg-gray-100 border border-gray-200 rounded-2xl">
+                    <h3 class="text-xl font-bold text-gray-800 mb-4">Prompt Used to Generate This Page</h3>
+                    <div class="p-4 bg-white border border-gray-300 rounded-xl whitespace-pre-wrap text-gray-600 text-sm">
+                        Generate your own, singular, web page that demonstrates the capabilities of generative AI. The only requirement is that it must have a navigation bar that takes you to these 4 pages: index.html, portfolio.html, qualifications.html, service.html. You do not need to make these pages, just link your navigation bar to them.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-gray-800 text-white text-center p-4 mt-8">
+        <p class="text-sm">&copy; 2024 Generative AI Showcase. All Rights Reserved.</p>
+    </footer>
+
+    <script>
+        const generateBtn = document.getElementById('generateBtn');
+        const promptInput = document.getElementById('prompt');
+        const outputDiv = document.getElementById('output');
+        const loadingDiv = document.getElementById('loading');
+        
+        // Function to make the API call with exponential backoff
+        async function fetchWithRetry(url, options, retries = 3, delay = 1000) {
+            for (let i = 0; i < retries; i++) {
+                try {
+                    const response = await fetch(url, options);
+                    if (response.status === 429) {
+                        // Too Many Requests, retry with backoff
+                        await new Promise(res => setTimeout(res, delay * Math.pow(2, i)));
+                        continue;
+                    }
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return await response.json();
+                } catch (error) {
+                    if (i === retries - 1) throw error;
+                    await new Promise(res => setTimeout(res, delay * Math.pow(2, i)));
+                }
+            }
+        }
+
+        generateBtn.addEventListener('click', async () => {
+            const userPrompt = promptInput.value.trim();
+            if (!userPrompt) {
+                outputDiv.textContent = "Please enter a prompt to generate text.";
+                return;
+            }
+
+            outputDiv.textContent = '';
+            loadingDiv.classList.remove('hidden');
+
+            try {
+                const payload = {
+                    contents: [{ parts: [{ text: userPrompt }] }],
+                };
+                const apiKey = "";
+                const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+
+                const result = await fetchWithRetry(apiUrl, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload)
+                });
+                
+                const generatedText = result?.candidates?.[0]?.content?.parts?.[0]?.text;
+                if (generatedText) {
+                    outputDiv.textContent = generatedText;
+                } else {
+                    outputDiv.textContent = "Error: Could not generate content. Please try again.";
+                }
+
+            } catch (error) {
+                console.error('Error generating content:', error);
+                outputDiv.textContent = "An error occurred. Please check the console for details.";
+            } finally {
+                loadingDiv.classList.add('hidden');
+            }
+        });
+    </script>
 </body>
 </html>
