Added the rest of the external links, mostly embedded in images.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             </p>
         </div>
         <div class="intro-image">
-                <img class="tamu-logo" src="TAMU.svg">
+                <a href="https://www.tamu.edu/index.html">
+                  <img class="tamu-logo" src="TAMU.svg">
+                </a>
                 <img class="profile-pic" src="me.jpg" width="500px">
         </div>
     </div>
