--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
                 <img class="project-image snaic" src="SNAIC.png" alt="SNAIC Project Logo">
             </a>
             <p>
-                SNAIC stands for Seamless Neural Artificial Intelligence Capturer; basically, 
-                the program is meant to take a picture and capture any objects in the picture. 
-                The goal of the app was for users to be able to find products they were looking 
-                for by taking pictures of them, where then the app would find a link to purchase 
-                the item. I was part of the AI team, working with META's Segment Anything Model, 
-                and our job was to configure the model to identify objects based on where the user 
-                clicks on the screen. 
+                A product of the <a href="https://getinvolved.tamu.edu/org/aggiecodingclub">Aggie Coding Club</a>, SNAIC stands for Seamless Neural Artificial
+                Intelligence Capturer; basically, the program is meant to take a picture and 
+                capture any objects in the picture. The goal of the app was for users to be able
+                to find products they were looking for by taking pictures of them, where then
+                the app would find a link to purchase the item. I was part of the AI team, working 
+                with META's Segment Anything Model, and our job was to configure the model to 
+                identify objects based on where the user clicks on the screen. 
             </p>
         </div>
     </div>
