--- a/qualifications.html
+++ b/qualifications.html
@@ -30,6 +30,12 @@
         <a class="download-button" href="FernandoCifuentesResume2025.pdf" download>Download Resume</a>
     </div>
     
+    <div class="skills-image">
+        <a href="https://icodeschool.com/">
+            <img class="icode-logo" src="icode.jpg">
+        </a>
+    </div>
+
     <div class="skills-container">
         <div class="skills-column">
             <h3>Technical Skills:</h3>
