--- a/qualifications.html
+++ b/qualifications.html
@@ -7,60 +7,73 @@
     <title>Qualifications | Fernando Cifuentes</title>
 </head>
 <body>
-     <nav class="simple-nav">
-         <ul>
-             <li><a href="index.html">Home</a></li>
-             <li><a href="portfolio.html">Portfolio</a></li>
-             <li class="active"><a href="qualifications.html">Qualifications</a></li>
-             <li><a href="service.html">Service</a></li>
-             <li><a href="genai.html">GenAI</a></li>
-         </ul>
-     </nav>
+    <div class="content-wrapper">
+        <nav class="simple-nav">
+             <ul>
+                 <li><a href="index.html">Home</a></li>
+                 <li><a href="portfolio.html">Portfolio</a></li>
+                 <li class="active"><a href="qualifications.html">Qualifications</a></li>
+                 <li><a href="service.html">Service</a></li>
+                 <li><a href="genai.html">GenAI</a></li>
+             </ul>
+        </nav>
 
-     <div class="header">
-        <h1>Qualifications</h1>
-        <h2>My Resume:</h2>
-     </div>
-
-     <div class="resume-container">
-        <iframe src="FernandoCifuentesResume2025.pdf#toolbar=0&navpanes=0&scrollbar=0"></iframe>
-     </div>
-
-    <div class="download-container">
-        <a class="download-button" href="FernandoCifuentesResume2025.pdf" download>Download Resume</a>
-    </div>
-    
-    <div class="skills-image">
-        <a href="https://icodeschool.com/">
-            <img class="icode-logo" src="icode.jpg">
-        </a>
-    </div>
-
-    <div class="skills-container">
-        <div class="skills-column">
-            <h3>Technical Skills:</h3>
-            <ul>
-                <li>Python</li>
-                <li>HTML/CSS</li>
-                <li>C++</li>
-                <li>Use of AI as an assistant</li>
-                <li>Understanding of Data Structure & Architecture</li>
-            </ul>
+        <div class="header">
+            <h1>Qualifications</h1>
+            <h2 class="centered-subtitle">My Resume:</h2>
         </div>
-        <div class="skills-column">
-            <h3>Areas of Interest:</h3>
-            <ul>
-                <li>Software Development</li>
-                <li>AI</li>
-                <li>Web Development</li>
-            </ul>
+
+        <div class="resume-container">
+            <iframe src="FernandoCifuentesResume2025.pdf#toolbar=0&navpanes=0&scrollbar=0"></iframe>
+        </div>
+
+        <div class="download-container">
+            <a class="download-button" href="FernandoCifuentesResume2025.pdf" download>Download Resume</a>
+        </div>
+        
+        <div class="skills-image">
+            <a href="https://icodeschool.com/">
+                <img class="icode-logo" src="icode.jpg">
+            </a>
+        </div>
+
+        <div class="skills-container">
+            <div class="skills-column">
+                <h3>Technical Skills:</h3>
+                <ul>
+                    <li>Python</li>
+                    <li>HTML/CSS</li>
+                    <li>C++</li>
+                    <li>Use of AI as an assistant</li>
+                    <li>Understanding of Data Structure & Architecture</li>
+                </ul>
+            </div>
+            <div class="skills-column">
+                <h3>Areas of Interest:</h3>
+                <ul>
+                    <li>Software Development</li>
+                    <li>AI</li>
+                    <li>Web Development</li>
+                </ul>
+            </div>
         </div>
     </div>
 
-<div class="button-container">
-    <button id="themeSwitcher">Switch Style</button>
-</div>
+    <nav id="dark-mode-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li class="active"><a href="qualifications.html">Qualifications</a></li>
+            <li><a href="service.html">Service</a></li>
+            <li><a href="genai.html">GenAI</a></li>
+        </ul>
+    </nav>
 
-<script src="script.js"></script>
+    <div class="button-container">
+        <button id="themeSwitcher">Switch Style</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
