--- a/service.html
+++ b/service.html
@@ -7,7 +7,55 @@
     <title>Service | Fernando Cifuentes</title>
 </head>
 <body>
-    <nav class="simple-nav">
+    <div class="content-wrapper">
+        <nav class="simple-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="qualifications.html">Qualifications</a></li>
+                <li class="active"><a href="service.html">Service</a></li>
+                <li><a href="genai.html">GenAI</a></li>
+            </ul>
+        </nav>
+
+        <div class="header">
+            <h1>Service</h1>
+        </div>
+
+        <div class="service-grid">
+            <div class="service-card">
+                <h2>Aggie Habitat for Humanity</h2>
+                <a href="https://www.aggielandhabitat.org/">
+                    <img src="Habitat.jpeg" alt="Aggie Habitat for Humanity project">
+                </a>
+                <p>
+                    Aggie Habitat for Humanity is a College org associated with the actual Habitat for Humanity, and similar to the real organization, our task is to help the Bryan-College Station Area by building homes for people who are in need. The process goes as follows: A family first needs to apply for a home, and when they are accepted, they must work with us to help build the house. When no houses are being built, this student org also volunteers to help with other services around Campus, such as cleaning the stadium.
+                </p>
+            </div>
+
+            <div class="service-card">
+                <h2>The 12th Can</h2>
+                <a href="https://12thcan.tamu.edu/">
+                    <img src="TwelfthCan.jpeg" alt="The 12th Can food pantry">
+                </a>
+                <p>
+                    The 12th Can is a food pantry service organization. However, this club is unique compared to other food pantry service orgs as the members get to see the people face to face when they are shopping at the pantry. A member's role in this club is both to restock the pantries, and to serve customers who visit the shop. Food security is a big problem in society, and I am hoping to be able to make a difference by being in this organization.
+                </p>
+            </div>
+            
+            <div class="service-card">
+                <h2>The Big Event</h2>
+                <a href="https://bigevent.tamu.edu/">
+                    <img src="BigEvent.jpg" alt="The Big Event service activity">
+                </a>
+                <p>
+                    In my Sophomore year of college, I participated in the Big Event, a large-scale service event where many students get together to help the community. Local residents apply for labor, specifying what job needs to be done as well as the tools needed to complete it. I joined through a friend of mine's organization, working in a group of 10 students, some were people I knew, and others were strangers to me. For my task, we were required to remove an old concrete path in the resident's front yard, moving the chunks of concrete to the edge of the property to be disposed of later. Overall, I grew closer to the people in my group, getting to know new people in my school, and felt a deep satisfaction upon completing the task, knowing that we helped someone in our community.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <nav id="dark-mode-nav">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -17,46 +65,11 @@
         </ul>
     </nav>
 
-    <div class="header">
-        <h1>Service</h1>
-    </div>
-
-    <div class="service-grid">
-        <div class="service-card">
-            <h2>The Big Event</h2>
-            <a href="https://bigevent.tamu.edu/">
-                <img src="BigEvent.jpg" alt="The Big Event service activity">
-            </a>
-            <p>
-                In my Sophomore year of college, I participated in the Big Event, a large-scale service event where many students get together to help the community. Local residents apply for labor, specifying what job needs to be done as well as the tools needed to complete it. I joined through a friend of mine's organization, working in a group of 10 students, some were people I knew, and others were strangers to me. For my task, we were required to remove an old concrete path in the resident's front yard, moving the chunks of concrete to the edge of the property to be disposed of later. Overall, I grew closer to the people in my group, getting to know new people in my school, and felt a deep satisfaction upon completing the task, knowing that we helped someone in our community.
-            </p>
-        </div>
-
-        <div class="service-card">
-            <h2>Aggie Habitat for Humanity</h2>
-            <a href="https://www.aggielandhabitat.org/">
-                <img src="Habitat.jpeg" alt="Aggie Habitat for Humanity project">
-            </a>
-            <p>
-                Aggie Habitat for Humanity is a College org associated with the actual Habitat for Humanity, and similar to the real organization, our task is to help the Bryan-College Station Area by building homes for people who are in need. The process goes as follows: A family first needs to apply for a home, and when they are accepted, they must work with us to help build the house. When no houses are being built, this student org also volunteers to help with other services around Campus, such as cleaning the stadium.
-            </p>
-        </div>
-
-        <div class="service-card">
-            <h2>The 12th Can</h2>
-            <a href="https://12thcan.tamu.edu/">
-                <img src="TwelfthCan.jpeg" alt="The 12th Can food pantry">
-            </a>
-            <p>
-                The 12th Can is a food pantry service organization. However, this club is unique compared to other food pantry service orgs as the members get to see the people face to face when they are shopping at the pantry. A member's role in this club is both to restock the pantries, and to serve customers who visit the shop. Food security is a big problem in society, and I am hoping to be able to make a difference by being in this organization.
-            </p>
-        </div>
-    </div>
-
     <div class="button-container">
-    <button id="themeSwitcher">Switch Style</button>
-</div>
-<script src="script.js"></script>
+        <button id="themeSwitcher">Switch Style</button>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
 
