Added LinkedIn link for second style.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="qualifications.html">Qualifications</a></li>
             <li><a href="service.html">Service</a></li>
+            <li><a href="https://www.linkedin.com/in/fernando-cif/">LinkedIn</a></li>
             <li><a href="genai.html">GenAI</a></li>
         </ul>
     </nav>
